# HH_Parser_to_DB

./: README.md  main.py  pyproject.toml
src/: config.py  db_manager.py  hh_parser.py  utils.py
